--- a/ElGamal.tex
+++ b/ElGamal.tex
@@ -411,7 +411,8 @@ $\bullet$ LaTex
 
 \section{Кастомная команда и сниппеты}
 
-\newcommand\myeq{\stackrel{\mathclap{\normalfont\mbox{def}}}{=}} - def над знаком равно \myeq
+def над знаком равно $\backslash$ myeq \\
+Сниппеты для yasnippet лежат в папке latex-mode 
 
 \section{Ссылка на репозиторий }
 
